--- a/bundles/bundle_nl.properties
+++ b/bundles/bundle_nl.properties
@@ -1,1 +1,6 @@
-block.adamantium-mod-adamantium-conveyor.name=Adamantium Conveyor
+block.adamantium-mod-adamantium-conveyor.name = Adamantium Conveyor
+block.adamantium-mod-adamantium-conveyor.description = Een snelle en sterke loopband.
+block.adamantium-mod-adamantium-enfusor.name = Adamantium Enfusor
+block.adamantium-mod-adamantium-enfusor.description = Infuseerd Adamantium en Thorium.
+block.adamantium-mod-adamantium-forge.name = Adamantium Forge
+block.adamantium-mod-adamantium-forge.description = Combineert meerder grodstoffen om vloeibare Adamantium te maken.
