--- a/bundles/bundle_nl.properties
+++ b/bundles/bundle_nl.properties
@@ -4,3 +4,14 @@ block.adamantium-mod-adamantium-enfusor.name = Adamantium Enfusor
 block.adamantium-mod-adamantium-enfusor.description = Infuseerd Adamantium en Thorium.
 block.adamantium-mod-adamantium-forge.name = Adamantium Forge
 block.adamantium-mod-adamantium-forge.description = Combineert meerder grodstoffen om vloeibare Adamantium te maken.
+block.adamantium-mod-adamantium-gun.name = Adamantium gun
+block.adamantium-mod-adamantium-gun.description = Schiet zware projectelen die een grote hoeveelheid schade veroorzaken.
+block.adamantium-mod-adamantium-press.name = Adamantium press
+block.adamantium-mod-adamantium-press.description = Stolt gesmolten Adamantium naar Adamantium.
+block.adamantium-mod-adamantium-reactor.name = Adamantium reactor
+block.adamantium-mod-adamantium-reactor.description = Een erg efficente en kleine reactor.
+block.adamantium-mod-lage-adamantium-wall.name = Grote Adamantium Muur
+block.adamantium-mod-lage-adamantium-wall.description = Een grote en sterke muur.
+block.adamantium-mod-small-adamantium-wall.name = Adamantium muur
+block.adamantium-mod-small-adamantium-wall.description = Een sterke en kleine muur.
+items.adamantium-mod-adamantium-infused-thorium.name = Adamantium geinfuseede Thorium
