--- a/bundles/bundle_nl.properties
+++ b/bundles/bundle_nl.properties
@@ -15,3 +15,4 @@ block.adamantium-mod-lage-adamantium-wall.description = Een grote en sterke muur
 block.adamantium-mod-small-adamantium-wall.name = Adamantium muur
 block.adamantium-mod-small-adamantium-wall.description = Een sterke en kleine muur.
 items.adamantium-mod-adamantium-infused-thorium.name = Adamantium geinfuseede Thorium
+items.adamantium-mod-adamantium-infused-thorium.description = Een zwaar explosiev materiaal, wat wordt gebruikt als ammunietie.
