--- a/bundles/bundle_nl.properties
+++ b/bundles/bundle_nl.properties
@@ -16,3 +16,7 @@ block.adamantium-mod-small-adamantium-wall.name = Adamantium muur
 block.adamantium-mod-small-adamantium-wall.description = Een sterke en kleine muur.
 items.adamantium-mod-adamantium-infused-thorium.name = Adamantium geinfuseede Thorium
 items.adamantium-mod-adamantium-infused-thorium.description = Een zwaar explosiev materiaal, wat wordt gebruikt als ammunietie.
+items.adamantium-mod-adamantium.name = Adamantium
+items.adamantium-mod-adamantium.description = Een zeldzame, licht en sterke grondstof.
+liquids.adamantium-mod-liquids-adamantium.name = Vloeibare Adamantium
+liquids.adamantium-mod-liquids-adamantium.description = Een heten en zware gesmolten metaal, waneer het slot is het niet te smelten.
